--- a/src/app/posts/components/posts/posts.component.html
+++ b/src/app/posts/components/posts/posts.component.html
@@ -1,3 +1,7 @@
 <h1>Posts Page!</h1>
 
 <div *ngIf="isLoading$ | async">Loading.....</div>
+<div *ngIf="error$ | async as error">{{error}}</div>
+<div *ngFor="let post of posts$ | async">
+    id: {{post.id}}, title: {{post.title}}
+</div>
